# reactive_planners

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  colcon.pkg  license.txt  package.xml  readme.md  setup.py
.github/workflows/: cmake.yml
cmake/: boost_python.cmake
demo/: 20200113_centroidal_stepper.ipynb  re_split_dcm_demo.py  split_dcm_planner_demo.py  split_dcm_uneven_terrain_demo.py  step_adaptation_timing_planner_demo.py
demos/: 20200113_centroidal_stepper.ipynb  20200113_step_adjustment.ipynb  20200120_step_adjustment_dg.ipynb  analyze_data.py  bolt_step_adjustment.py  demo_dcm_reactive_stepper.py  demo_dg_real_solo12_stepper.py  demo_dg_solo12_step_adjustment_walk.ipynb  demo_dg_whole_body_controller.py  demo_dgh_sim_solo12_step_adjustment.py  demo_dgh_solo12_step_adjustment.py  demo_end_effector_trajectory3d.py  demo_end_effector_trajectory_3d.cpp  demo_go1_reactive_planners.py  demo_planners_running.py  demo_planners_running_v2.py  demo_reactive_planners_bolt_running.py  demo_reactive_planners_bolt_running_crocoddyl.py  demo_reactive_planners_bolt_step_adjustment.py  demo_reactive_planners_dcm_reactive_stepper.py  demo_reactive_planners_dynamically_consistent_end_effector_trajectory.py  demo_reactive_planners_end_effector_trajectory3d.py  demo_reactive_planners_go1_step_adjustment.py  demo_reactive_planners_re_split_dcm.py  demo_reactive_planners_running.py  demo_reactive_planners_solo12_step_adjustment.ipynb  demo_reactive_planners_solo12_step_adjustment.py  demo_reactive_planners_solo12_step_adjustment_rotate.ipynb  demo_reactive_planners_solo12_step_adjustment_walk.ipynb  demo_reactive_planners_solo12_step_adjustment_walk.py  demo_reactive_planners_split_dcm_uneven_terrain.py  demo_reactive_planners_step_adaptation_timing_planner.py  demo_reactive_planners_step_adjustment.py  demo_reactive_planners_stepper_head.py  demo_reactive_planners_walking.py  demo_rerun_trajectory.py  demo_stepper_head.cpp  demo_walking.py  pdf_generator2.py  pdf_generator4.py  (+32 more)
demos/dataset1/: plt_D_error.txt  plt_D_error0.txt  plt_D_error1.txt  plt_D_error2.txt  plt_ND_error.txt  plt_ND_error0.txt  plt_ND_error1.txt  plt_ND_error2.txt  plt_time_all_D_ND.txt
demos/dataset10/: plt_is_left_in_contactFalse.txt  plt_left_eef_real_posxFalse.txt  plt_left_eef_real_posxTrue.txt  plt_left_eef_real_posyFalse.txt  plt_left_eef_real_posyTrue.txt  plt_left_eef_real_poszFalse.txt  plt_left_eef_real_poszTrue.txt  plt_left_foot_positionxFalse.txt  plt_left_foot_positionxTrue.txt  plt_left_foot_positionyFalse.txt  plt_left_foot_positionyTrue.txt  plt_left_foot_positionzFalse.txt  plt_next_step_locationxFalse.txt  plt_next_step_locationxTrue.txt  plt_next_step_locationyFalse.txt  plt_next_step_locationyTrue.txt  plt_right_eef_real_posxFalse.txt  plt_right_eef_real_posxTrue.txt  plt_right_eef_real_posyFalse.txt  plt_right_eef_real_posyTrue.txt  plt_right_eef_real_poszFalse.txt  plt_right_eef_real_poszTrue.txt  plt_right_foot_positionxFalse.txt  plt_right_foot_positionxTrue.txt  plt_right_foot_positionyFalse.txt  plt_right_foot_positionyTrue.txt  plt_right_foot_positionzFalse.txt
demos/dataset11/: pdf_generator5.py  plt_is_left_in_contactFalse.txt  plt_is_left_in_contactTrue.txt  plt_left_eef_real_posxFalse.txt  plt_left_eef_real_posxTrue.txt  plt_left_eef_real_posyFalse.txt  plt_left_eef_real_posyTrue.txt  plt_left_eef_real_poszFalse.txt  plt_left_eef_real_poszTrue.txt  plt_left_foot_positionxFalse.txt  plt_left_foot_positionxTrue.txt  plt_left_foot_positionyFalse.txt  plt_left_foot_positionyTrue.txt  plt_left_foot_positionzFalse.txt  plt_left_foot_positionzTrue.txt  plt_next_step_locationxFalse.txt  plt_next_step_locationxTrue.txt  plt_next_step_locationyFalse.txt  plt_next_step_locationyTrue.txt  plt_right_eef_real_posxFalse.txt  plt_right_eef_real_posxTrue.txt  plt_right_eef_real_posyFalse.txt  plt_right_eef_real_posyTrue.txt  plt_right_eef_real_poszFalse.txt  plt_right_eef_real_poszTrue.txt  plt_right_foot_positionxFalse.txt  plt_right_foot_positionxTrue.txt  plt_right_foot_positionyFalse.txt  plt_right_foot_positionyTrue.txt  plt_right_foot_positionzFalse.txt  plt_right_foot_positionzTrue.txt
demos/dataset12/: analyze_data.py  plt_is_left_in_contactFalse.txt  plt_is_left_in_contactTrue.txt  plt_left_eef_real_posxFalse.txt  plt_left_eef_real_posxTrue.txt  plt_left_eef_real_posyFalse.txt  plt_left_eef_real_posyTrue.txt  plt_left_eef_real_poszFalse.txt  plt_left_eef_real_poszTrue.txt  plt_left_foot_positionxFalse.txt  plt_left_foot_positionxTrue.txt  plt_left_foot_positionyFalse.txt  plt_left_foot_positionyTrue.txt  plt_left_foot_positionzFalse.txt  plt_left_foot_positionzTrue.txt  plt_next_step_locationxFalse.txt  plt_next_step_locationxTrue.txt  plt_next_step_locationyFalse.txt  plt_next_step_locationyTrue.txt  plt_right_eef_real_posxFalse.txt  plt_right_eef_real_posxTrue.txt  plt_right_eef_real_posyFalse.txt  plt_right_eef_real_posyTrue.txt  plt_right_eef_real_poszFalse.txt  plt_right_eef_real_poszTrue.txt  plt_right_foot_positionxFalse.txt  plt_right_foot_positionxTrue.txt  plt_right_foot_positionyFalse.txt  plt_right_foot_positionyTrue.txt  plt_right_foot_positionzFalse.txt  (+1 more)
python/: reactive_planners_bolt_running.py  reactive_planners_bolt_step_adjustment.py
src/: com_planner.cpp  dcm_reactive_stepper.cpp  dcm_traj_planner.cpp  dcm_vrp_planner.cpp  demo_reactive_planners_solo12_step_adjustment.cpp  dynamically_consistent_end_effector_trajectory.cpp  end_effector_trajectory_3d.cpp  lipm_smulator.cpp  new_end_effector_trajectory_3d.cpp  polynomial_end_effector_trajectory.cpp  quadruped_dcm_reactive_stepper.cpp  reactive_planners_controller_solo12.cpp  stepper_head.cpp
srcpy/: com_planner.cpp  dcm_reactive_stepper.cpp  dcm_vrp_planner.cpp  dynamically_consistent_end_effector_trajectory.cpp  end_effector_trajectory_3d.cpp  polynomial_end_effector_trajectory.cpp  quadruped_dcm_reactive_stepper.cpp  reactive_planners.cpp  stepper_head.cpp  walking_dg_python_module.cpp  walking_dg_python_module.hpp
tests/: dcm_vrp_planner_ut.cpp  end_effector_trajectory_3d_ut.cpp  main.cpp
(+290 files in other folders)
